Implement JavaScriptLanguage as a generic PolyglotLanguage
To prepare for supporting other GraalVM languages.
Relates to https://github.com/crate/crate/issues/15007